# snake-game

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
include/: apple.hpp  config.hpp  grid.hpp  snake.hpp
src/: apple.cpp  grid.cpp  main.cpp  snake.cpp
